--- a/.air.toml
+++ b/.air.toml
@@ -1,44 +1,39 @@
 # Config file for [Air](https://github.com/cosmtrek/air) in TOML format
 
 # Working directory
-# . or absolute path, please note that the directories following must be under root.
+# . or absolute path, please note that the directories following must be under root
 root = "."
 tmp_dir = "tmp"
 
 [build]
 # Just plain old shell command. You could use `make` as well.
-cmd = "go build -gcflags='all=-N -l' -o ./tmp/app/engine main.go"
+cmd = "go build -gcflags='all=-N -l' -o ./tmp/main cmd/app/main.go"
 # Binary file yields from `cmd`.
-bin = "tmp/app"
+bin = "tmp/main"
 
-# Customize binary, can setup environment variables when run your app.
-full_bin = "./tmp/app/engine"
+# Customize binary.
+# This is how you start to run your application. Since my application will works like CLI, so to run it, like to make a CLI call.
+full_bin = "dlv exec --accept-multiclient --log --headless --continue --listen :2345 --api-version 2 ./tmp/main http"
+# This log file places in your tmp_dir.
+log = "air_errors.log"
 # Watch these filename extensions.
-include_ext = ["go", "tpl", "tmpl", "html", "yaml",".env","yml"]
+include_ext = ["go", "tpl", "tmpl", "html", "yaml",".env"]
 # Ignore these filename extensions or directories.
 exclude_dir = ["tmp", "docs"]
-
-# This log file places in your tmp_dir.
-log = "air.log"
 # It's not necessary to trigger build each time file changes if it's too frequent.
 delay = 500 # ms
 
 [log]
 # Show log time
-time = false
+time = true
 
 [color]
-# Customize each part's color. If no color found, use the raw app log.
-app = ""
-main = "magenta"
-watcher = "cyan"
-build = "yellow"
-runner = "green"
+  app = ""
+  build = "yellow"
+  main = "magenta"
+  runner = "green"
+  watcher = "cyan"
 
 [misc]
 # Delete tmp directory on exit
 clean_on_exit = true
-
-[screen]
-clear_on_rebuild = true
-keep_scroll = true
