--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,19 @@
-# Server Config
-ALLOWED_HOSTS=0.0.0.0
-SERVER_HOST=0.0.0.0
-SERVER_PORT=7070
-SERVER_TIMEZONE=Asia/Makassar
+# APP
+APP_URL=
+APP_NAME=factum-backend
+APP_VERSION=
+APP_SECRET=
+APP_ENV=
+APP_TIMEOUT=3
+TOKEN_LIFESPAN=100
+REFRESH_TOKEN_LIFESPAN=168
+TOKEN_DURATION=100
+DEEPLINK_URL=
 
-# Super Admin Credentials
+# HTTP
+HTTP_PORT=7070
+
+# ADMIN CREDENTIALS
 ADMIN_EMAIL=admin@test.com
 ADMIN_PASSWORD=adminpass
 
@@ -12,14 +21,14 @@ ADMIN_PASSWORD=adminpass
 API_SECRET=abcdefh
 REFRESH_SECRET=abcdefh
 TOKEN_HOUR_LIFESPAN =1
-# REFRESH TOKEN WILL EXPIRED in 7 DAYS == 168 Hours
-REFRESH_TOKEN_HOUR_LIFESPAN =168
+REFRESH_TOKEN_HOUR_LIFESPAN =168 # REFRESH TOKEN WILL EXPIRED in 7 DAYS == 168 Hours
 
-# Database Config
-MASTER_DB_NAME=skbackend_pg_go
+# DATABASE
+MASTER_DB_POOL_MAX=1
+MASTER_DB_NAME=skdb_pg_go
 MASTER_DB_USER=root
 MASTER_DB_PASSWORD=password
-MASTER_DB_HOST=db
-MASTER_DB_PORT=5432
-MASTER_DB_LOG_MODE=True
+MASTER_DB_HOST=skbackend_db
+MASTER_DB_PORT=5432 
+MASTER_DB_LOG_MODE=False
 MASTER_SSL_MODE=disable
