--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,11 +9,11 @@ services:
     container_name: skbackend_pg_container
     image: postgres:13-alpine
     ports:
-      - "${MASTER_DB_PORT}:5432"
+      - "${DB_PORT}:5432"
     environment:
-      - POSTGRES_USER=${MASTER_DB_USER}
-      - POSTGRES_PASSWORD=${MASTER_DB_PASSWORD}
-      - POSTGRES_DB=${MASTER_DB_NAME}
+      - POSTGRES_USER=${DB_USER}
+      - POSTGRES_PASSWORD=${DB_PASSWORD}
+      - POSTGRES_DB=${DB_NAME}
     volumes:
       - skbackend_pg_volume:/var/lib/postgresql/data/
     networks:
