--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -15,7 +15,7 @@ jobs:
         with:
           go-version: '1.20.x'
       - name: Install Dependencies
-        run: go get .
+        run: go get ./cmd/app
       - name: Build App
         run: go build -v ./...
       - name: Unit Test with Go CLI
