major update for the model.

--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -1,12 +1,15 @@
-name: Build and test everytime PR made on main, staging and dev branch
+name: Build and test 
+
 on:
   pull_request:
     branches:
       - main
       - stg
       - dev
+
 jobs:
   build:
+    name: Build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -14,9 +17,21 @@ jobs:
         uses: actions/setup-go@v3
         with:
           go-version: '1.20.x'
-      - name: Install Dependencies
-        run: go get ./cmd/app
-      - name: Build App
+      - name: Install dependencies
+        run: go install ./...
+      - name: Build
         run: go build -v ./...
-      - name: Unit Test with Go CLI
+
+  test:
+    name: Test
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Setup Go
+        uses: actions/setup-go@v3
+        with:
+          go-version: '1.20.x'
+      - name: Install dependencies
+        run: go install ./...
+      - name: Test with the Go CLI
         run: go test ./...
