updated config and added repo for model.

--- a/.env.example
+++ b/.env.example
@@ -16,7 +16,8 @@ HTTP_PORT=7070
 # ADMIN CREDENTIALS
 ADMIN_EMAIL=admin@test.com
 ADMIN_PASSWORD=adminpass
-ADMIN_FULLNAME=administrator
+ADMIN_FIRSTNAME=jonathan
+ADMIN_LASTNAME=vince
 
 # JWT Config
 API_SECRET=abcdefh
