update: example of env.

--- a/example.env
+++ b/example.env
@@ -27,10 +27,10 @@ REFRESH_TOKEN_HOUR_LIFESPAN =168 # REFRESH TOKEN WILL EXPIRED in 7 DAYS == 168 H
 
 # DATABASE
 DB_POOL_MAX=1
-DB_NAME=skdb_pg_go
+DB_NAME=meals_db
 DB_USER=root
 DB_PASSWORD=password
-DB_HOST=skbackend_db
+DB_HOST=meals_db
 DB_PORT=5432 
 DB_LOG_MODE=False
 SSL_MODE=disable
