update: remove quotes on workflows name.

--- a/.github/workflows/stg-deployment.yaml
+++ b/.github/workflows/stg-deployment.yaml
@@ -2,7 +2,7 @@ name: Deployment to staging
 
 on:
   workflow_run:
-    workflows: ["Build and test"]
+    workflows: [Build and test]
     types:
       - completed
 
