--- a/.github/workflows/stg-deployment.yaml
+++ b/.github/workflows/stg-deployment.yaml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   build-and-deploy:
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    # if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     env:
       DOCKER_IMAGE_NAME: ${{ vars.DOCKER_USERNAME }}/${{ github.event.repository.name }}:latest
