--- a/.github/workflows/build-and-test.yaml
+++ b/.github/workflows/build-and-test.yaml
@@ -21,6 +21,9 @@ jobs:
         run: go install ./...
       - name: Build
         run: go build -v ./...
+      - name: Echo
+        run: echo "Hello, world!"
+
 
   test:
     name: Test
