--- a/.github/workflows/stg-deployment.yaml
+++ b/.github/workflows/stg-deployment.yaml
@@ -6,11 +6,6 @@ on:
     types:
       - completed
 
-# on:
-#   push:
-#     branches:
-#       - stg
-
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
@@ -30,13 +25,16 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       
+      - name: Echo Docker Image Name
+        run: echo "Docker Image Name:" ${{ env.DOCKER_IMAGE_NAME }}
+      
       - name: Build and Push
         id: build-and-push
         uses: docker/build-push-action@v6
         with:
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: $DOCKER_IMAGE_NAME
+          tags: ${{ env.DOCKER_IMAGE_NAME }}
 
       - name: Remote Access to Droplets
         uses: appleboy/ssh-action@v1.0.3
@@ -47,7 +45,7 @@ jobs:
           script_stop: true
           command_timeout: 200m
           script: |
-            docker pull $DOCKER_IMAGE_NAME
+            docker pull ${{ env.DOCKER_IMAGE_NAME }}
             echo "SERVER_ENV=${{ secrets.SERVER_ENV }}" > .env
             docker stop ${{ vars.DOCKER_APP_NAME }} || true
             docker rm ${{ vars.DOCKER_APP_NAME }} || true
@@ -55,5 +53,5 @@ jobs:
             --name ${{ vars.DOCKER_APP_NAME }} \
             --env-file .env \
             --restart always \
-            $DOCKER_IMAGE_NAME
+            ${{ env.DOCKER_IMAGE_NAME }}
             sudo systemctl reload nginx
