--- a/.github/workflows/stg-deployment.yaml
+++ b/.github/workflows/stg-deployment.yaml
@@ -15,19 +15,16 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-        
+
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ vars.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-        
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-      
-      - name: Echo Docker Image Name
-        run: echo "Docker Image Name:" ${{ env.DOCKER_IMAGE_NAME }}
-      
+
       - name: Build and Push
         id: build-and-push
         uses: docker/build-push-action@v6
@@ -45,7 +42,7 @@ jobs:
           script_stop: true
           command_timeout: 200m
           script: |
-            docker pull ${{ env.DOCKER_IMAGE_NAME }}
+            docker pull $DOCKER_IMAGE_NAME
             echo "SERVER_ENV=${{ secrets.SERVER_ENV }}" > .env
             docker stop ${{ vars.DOCKER_APP_NAME }} || true
             docker rm ${{ vars.DOCKER_APP_NAME }} || true
@@ -53,5 +50,5 @@ jobs:
             --name ${{ vars.DOCKER_APP_NAME }} \
             --env-file .env \
             --restart always \
-            ${{ env.DOCKER_IMAGE_NAME }}
+            $DOCKER_IMAGE_NAME
             sudo systemctl reload nginx
