update: path to dockerfile on github actions script.

--- a/.github/workflows/stg-deployment.yaml
+++ b/.github/workflows/stg-deployment.yaml
@@ -27,6 +27,7 @@ jobs:
         id: build-and-push
         uses: docker/build-push-action@v6
         with:
+          file: ../../build/ci/Dockerfile.prod
           platforms: linux/amd64,linux/arm64
           push: true
           tags: ${{ vars.DOCKER_USERNAME }}/${{ github.event.repository.name }}:latest
