--- a/.github/workflows/stg-deployment.yaml
+++ b/.github/workflows/stg-deployment.yaml
@@ -51,4 +51,14 @@ jobs:
             --env-file .env \
             --restart always \
             ${{ vars.DOCKER_USERNAME }}/${{ github.event.repository.name }}:latest
+            
+            # Check if nginx is installed
+            if ! command -v nginx > /dev/null 2>&1; then
+              sudo apt-get update
+              sudo apt-get install -y nginx
+              sudo systemctl enable nginx
+              sudo systemctl start nginx
+            fi
+            
+            # Reload nginx
             sudo systemctl reload nginx
