--- a/.github/workflows/prod-deployment.yaml
+++ b/.github/workflows/prod-deployment.yaml
@@ -9,6 +9,10 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
+      - name: Get current date
+        id: date
+        run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
+
       - name: Checkout
         uses: actions/checkout@v3
 
@@ -28,25 +32,4 @@ jobs:
           file: ../../build/ci/Dockerfile.prod
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: ${{ vars.DOCKER_USERNAME }}/${{ github.event.repository.name }}:latest
-
-      - name: Remote Access to Droplets
-        uses: appleboy/ssh-action@v1.0.3
-        with:
-          host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SERVER_USERNAME }}
-          password: ${{ secrets.SERVER_PASSWORD }}
-          script_stop: true
-          command_timeout: 200m
-          script: |
-            docker pull ${{ vars.DOCKER_USERNAME }}/${{ github.event.repository.name }}:latest
-            rm -rf .env
-            echo "SERVER_ENV=${{ secrets.SERVER_ENV }}" > .env
-            docker stop ${{ vars.DOCKER_APP_NAME }} || true
-            docker rm ${{ vars.DOCKER_APP_NAME }} || true
-            docker run -d -p 7000:7000 \
-            --name ${{ vars.DOCKER_APP_NAME }} \
-            --env-file .env \
-            --restart always \
-            ${{ vars.DOCKER_USERNAME }}/${{ github.event.repository.name }}:latest
-            sudo systemctl reload nginx
+          tags: ${{ vars.DOCKER_USERNAME }}/${{ github.event.repository.name }}:${{ steps.date.outputs.date }}
