--- a/.github/workflows/prod-deployment.yaml
+++ b/.github/workflows/prod-deployment.yaml
@@ -9,10 +9,6 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Get current date
-        id: date
-        run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
-
       - name: Checkout
         uses: actions/checkout@v3
 
@@ -32,4 +28,4 @@ jobs:
           file: ../../build/ci/Dockerfile.prod
           platforms: linux/amd64,linux/arm64
           push: true
-          tags: ${{ vars.DOCKER_USERNAME }}/${{ github.event.repository.name }}:${{ steps.date.outputs.date }}
+          tags: ${{ vars.DOCKER_USERNAME }}/${{ github.event.repository.name }}:latest
