--- a/.github/workflows/prod-deployment.yaml
+++ b/.github/workflows/prod-deployment.yaml
@@ -29,3 +29,8 @@ jobs:
           platforms: linux/amd64,linux/arm64
           push: true
           tags: ${{ vars.DOCKER_USERNAME }}/${{ github.event.repository.name }}:latest
+
+      - name: Trigger CapRover Webhook
+        id: trigger-caprover-webhook
+        run: |
+          curl -X POST ${{ secrets.CAPROVER_WEBHOOK_URL }}
